added some words to move blob

--- a/_posts/2025-07-25-move.md
+++ b/_posts/2025-07-25-move.md
@@ -15,7 +15,7 @@ As many of you know, we’ve moved into our new home at **302 Pine Ave, Goleta**
 ## Why We Moved
 Our old space served us well for years, but the building sold in April and the new management set rent prices above what we could reasonably afford. The good news is the new Pine Ave location gives us:
 
-- **More square footage** for tools and equipment
+- **More square footage** for tools and equipment (~3,700sq/ft => ~5,000sq/ft)
 - Dedicated rooms for electronics, wood, and metal work
 - A larger community classroom and dedicated meeting area
 - Future capacity for even more tools
@@ -33,18 +33,18 @@ Since moving in, we’ve been:
 Santa Barbara Hackerspace is more than a workshop.  
 We’re a **community resource** where people can:
 
-- Learn hands-on skills
-- Share knowledge and collaborate
-- Build prototypes, projects, and ideas that otherwise wouldn’t leave the napkin
+- **Learn** hands-on skills
+- **Share** knowledge and collaborate
+- **Build** prototypes, projects, and ideas that otherwise wouldn’t leave the napkin
 
 Makerspaces like ours help bridge the gap between ideas and real-world impact. Whether you’re a high school student wanting to learn soldering, an entrepreneur building a prototype, or a hobbyist perfecting a passion project, this is your space.
 
 ## How You Can Help
 We’re a non-profit and run almost entirely on member dues and donations. Right now, our biggest needs are:
 
-- **Funding** for tools, safety equipment, and infrastructure
-- Volunteers to help set up the new space
-- Community support to spread the word
+- **Funding** for tools, safety equipment, and infrastructure (Donate Here)[https://store.sbhackerspace.com]
+- **Volunteers** to help set up the new space
+- **Community** support to spread the word
 
 If you’d like to contribute - financially, with tools, or with your time—please reach out to us. Every bit helps.
 
