flipped link so it links

--- a/_posts/2025-07-25-move.md
+++ b/_posts/2025-07-25-move.md
@@ -42,7 +42,7 @@ Makerspaces like ours help bridge the gap between ideas and real-world impact. W
 ## How You Can Help
 We’re a non-profit and run almost entirely on member dues and donations. Right now, our biggest needs are:
 
-- **Funding** for tools, safety equipment, and infrastructure (Donate Here)[https://store.sbhackerspace.com]
+- **Funding** for tools, safety equipment, and infrastructure [Donate Here](https://store.sbhackerspace.com)
 - **Volunteers** to help set up the new space
 - **Community** support to spread the word
 
